<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_welcome"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txtmsg"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/droidkufi_bold"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="end|center">
            <ImageView
                android:id="@+id/btnYoutube"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_youtube"
                android:layout_marginEnd="5dp"
                />
            <TextView
                android:id="@+id/btnHow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:text="@string/txthow"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/droidkufi_bold"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="center|bottom"
        android:layout_weight="0"
        android:text="@string/register"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        android:layout_marginBottom="20dp"
        app:cornerRadius="20dp"
        android:fontFamily="@font/droidkufi_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
